// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton.vue Renders correctly with an empty slot 1`] = `
<div
  class="tui-toggleBtn tui-toggleBtn_right"
>
  <button
    class="tui-toggleBtn__btn"
    type="button"
  >
    <span
      class=""
    >
      toggle button text
    </span>
  </button>
   
  <div
    class="tui-toggleBtn__icon"
  />
   
  <span
    aria-hidden="true"
    class="tui-toggleBtn__ui"
  />
</div>
`;

exports[`ToggleButton.vue Renders correctly with something in the slot 1`] = `
<div
  class="tui-toggleBtn tui-toggleBtn_right"
>
  <button
    class="tui-toggleBtn__btn"
    type="button"
  >
    <span
      class=""
    >
      toggle button text
    </span>
  </button>
   
  <div
    class="tui-toggleBtn__icon"
  >
    <div>
      icon button
    </div>
  </div>
   
  <span
    aria-hidden="true"
    class="tui-toggleBtn__ui"
  />
</div>
`;

exports[`ToggleButton.vue Renders correctly with something in the slot and an aria-label 1`] = `
<div
  class="tui-toggleBtn tui-toggleBtn_right"
>
  <button
    aria-label="Different button text"
    class="tui-toggleBtn__btn"
    type="button"
  >
    <span
      class="sr-only"
    >
      toggle button text
    </span>
  </button>
   
  <div
    class="tui-toggleBtn__icon"
  >
    <div>
      icon button
    </div>
  </div>
   
  <span
    aria-hidden="true"
    class="tui-toggleBtn__ui"
  />
</div>
`;
